--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "videosdk-demo-integration",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://lab.videosdk.live/videosdk-demo/",
+  "homepage": "https://lab.videosdk.live/",
   "dependencies": {
     "@headlessui/react": "^1.7.7",
     "@heroicons/react": "^2.0.13",
