--- a/package.json
+++ b/package.json
@@ -1,32 +1,35 @@
 {
-  "name": "videosdk-demo-integration",
+  "name": "react-sdk-example",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://lab.videosdk.live/",
   "dependencies": {
-    "@headlessui/react": "^1.7.7",
-    "@heroicons/react": "^2.0.13",
-    "@popperjs/core": "^2.11.7",
-    "@videosdk.live/react-sdk": "0.1.74",
-    "@videosdk.live/videosdk-media-processor-web": "^0.0.12",
-    "lottie-react": "^2.3.1",
+    "@headlessui/react": "^1.7.17",
+    "@heroicons/react": "^1.0.6",
+    "@popperjs/core": "^2.11.8",
+    "@videosdk.live/react-sdk": "^0.1.84",
+    "lottie-react": "^2.4.0",
+    "postcss-flexbugs-fixes": "^5.0.2",
+    "postcss-loader": "^7.3.3",
     "react": "^18.2.0",
-    "react-cropper": "^2.1.8",
     "react-dom": "^18.2.0",
-    "react-player": "^2.11.0",
+    "react-player": "^2.13.0",
     "react-responsive": "^9.0.2",
-    "react-scripts": "^5.0.1",
-    "react-toastify": "^9.1.1",
-    "web-vitals": "^3.1.1"
+    "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.3",
+    "web-vitals": "^2.1.4"
+  },
+  "overrides": {
+    "nth-check": "2.1.1",
+    "postcss": "^8.4.31"
   },
   "devDependencies": {
-    "@tailwindcss/typography": "^0.5.9",
-    "autoprefixer": "^10.4.13",
-    "postcss": "^8.4.21",
-    "tailwindcss": "^3.2.4"
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.31",
+    "tailwindcss": "^3.3.5"
   },
   "scripts": {
     "start": "react-scripts start",
+    "kill-start": "sudo kill -9 `sudo lsof -t -i:3000` && yarn start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
